Add google maps

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,8 @@
   <body>
     <div id="app">
     </div> <!-- end of app div -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDucB1DwrSHCcUWzG88ipz6Q-R61HK_HO4"></script>
     <script src="cljs-out/dev-main.js" type="text/javascript"></script>
+
   </body>
 </html>
